--- a/style.css
+++ b/style.css
@@ -3,21 +3,8 @@ body {
 }
 .container {
   height: 100vh;
+  width: 90%;
+  margin: 5% auto;
+  border-radius: 40px;
   background: linear-gradient(135deg, #2d3266, #343d99, #3140cc, #5766ff);
-}
-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.header_title {
-  width: 110px;
-  font-size: 10px;
-  text-align: right;
-  border: 2px solid #ffeeb2;
-  border-radius: 50px 0 0 50px;
-  border: 2px solid #ffeeb2;
-  background: #ffeeb2;
-  padding: 0 20px;
-  margin-right: 20px;
 }
