--- a/style.css
+++ b/style.css
@@ -8,3 +8,25 @@ body {
   border-radius: 40px;
   background: linear-gradient(135deg, #2d3266, #343d99, #3140cc, #5766ff);
 }
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 45px;
+}
+.header_title {
+  width: 110px;
+  font-size: 10px;
+  line-height: 18px;
+  text-align: right;
+  border-radius: 50px 0 0 50px;
+  background: #ffeeb2;
+  padding: 0px 30px;
+  margin-right: 20px;
+}
+.header_img {
+  border-radius: 0 50px 50px 0;
+  background: #33312b;
+  padding: 8px 20px;
+  margin-left: -20px;
+}
