--- a/varStyles.css
+++ b/varStyles.css
@@ -21,20 +21,23 @@
   font-family: var(--font-primary);
   font-size: 16px;
 }
-html{
-	height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
+
 body {
   background-color: var(--color-white-3);
-	width: 90%;
-	height: 90%;
-}
-.style_container {
+	width: 100vw;
+  overflow: hidden;
   display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.style_container {
+  display: none;
   flex-wrap: wrap;
+  align-items: center; /* Centralizar verticalmente */
+  justify-content: center; /* Centralizar horizontalmente */
+  height: 90%;
+  width: 90%;
   background: linear-gradient(
     135deg,
     var(--color-base-1),
@@ -42,4 +45,22 @@ body {
     var(--color-base-4),
     var(--color-base-3)
   );
+
+}
+
+[data-container="animar"] {
+  /* Adicionando animação */
+  display: flex;
+  animation: fadeInRight .6s ease-out;
+}
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
