--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  overflow: hidden;
 }
 .container {
   display: flex;
@@ -38,10 +39,10 @@ body {
     var(--color-base-4)
   );
   border-radius: 10px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 .secao1 {
-  order: 2;
-  flex: 90%;
+  flex: 60%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -52,14 +53,20 @@ body {
 }
 .secao1_btn {
   width: 100%;
-
-  display: flex;
+  height: 60%;
   flex-direction: column;
   /* justify-self: start; */
   align-self: flex-end;
-  margin-top: auto;
-  /* border: solid 3px lightgreen; */
+  display: flex;
+  justify-content: flex-end;
+  /* margin-top: auto;
+  margin-bottom: auto; */
 }
+
+.first_title{
+  margin-bottom: 2em;
+}
+
 .secao1_titulo {
   color: var(--color-primary-1);
   font-size: 18px;
@@ -87,7 +94,6 @@ span {
   width: 100%;
 }
 .secao2 {
-  order: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -97,8 +103,8 @@ span {
   margin: 0 auto;
 }
 .secao2_logotipo {
-  width: 80%;
-  height: 15%;
+  width: 90%;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -106,13 +112,14 @@ span {
 .secao2_titulo_logotipo {
   display: flex;
   align-items: center;
-  width: 80%;
-  height: 50px;
+  width: 70%;
+  min-height: 42px;
   padding: 0 25px 0 15px;
   text-align: end;
   background: var(--color-white-3);
   border-radius: 50px 0 0 50px;
   font-size: 16px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
 }
 
 .secao2_logotipo_img {
@@ -120,23 +127,33 @@ span {
   align-items: center;
   width: 100%;
   justify-content: center;
-  height: 50px;
   padding: 0 5px;
   background: var(--color-gray-4);
   border-radius: 0 50px 50px 0;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
 }
 .secao2_logotipo_img img {
-  width: 75px;
+  height: 42px;
 }
 
+.secao3 {
+  flex: 15%;
+  display: flex;
+}
 .secao1_btn_link {
   background: var(--color-primary-2);
-  padding: 16px 18%;
   text-align: center;
   font-size: 20px;
   font-weight: 800;
   text-decoration: none;
   color: var(--color-gray-4);
+}
+.secao1_btn_link {
+  height: 50%;
+  min-height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .secao1_btn_link_elementos {
   display: flex;
@@ -145,12 +162,14 @@ span {
   font-weight: 400;
   background: var(--color-primary-1);
 }
+
 .btn_border {
   border-radius: 0 0 10px 10px;
 }
 .secao1_btn_link_elementos img {
-  width: 25px;
-  padding-left: 15px;
+  height: 50%;
+  margin-left: 2em;
+  /* padding-left: 15px; */
 }
 
 @media (min-width: 1280px) {
