--- a/saiba_mais.css
+++ b/saiba_mais.css
@@ -38,3 +38,56 @@ body {
   border-radius: 10px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
+section {
+  color: var(--color-white);
+  font-size: 16px;
+  padding: 5%;
+}
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+p {
+  padding-bottom: 15px;
+  text-align: justify;
+  line-height: 16px;
+}
+h2 {
+  color: var(--color-primary-1);
+  font-size: 18px;
+  font-weight: 600;
+  padding-top: 10px;
+  padding-bottom: 8px;
+}
+ol {
+  counter-reset: li;
+}
+li {
+  line-height: 16px;
+  padding-bottom: 10px;
+  counter-increment: li;
+}
+li::before {
+  content: counter(li);
+  color: var(--color-primary-1);
+  display: inline-block;
+}
+span {
+  color: var(--color-primary-1);
+}
+.footer {
+  padding: 0;
+}
+.button {
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+a {
+  text-decoration: none;
+  color: var(--color-gray-4);
+  background: var(--color-primary-2);
+  padding: 10px 30px;
+  border-radius: 15px;
+  font-weight: bold;
+}
