--- a/saiba_mais.css
+++ b/saiba_mais.css
@@ -37,6 +37,7 @@ body {
   );
   border-radius: 10px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+  display: none;
 }
 section {
   color: var(--color-white);
@@ -90,4 +91,22 @@ a {
   padding: 10px 30px;
   border-radius: 15px;
   font-weight: bold;
+}
+
+
+[data-container ='show'] {
+  display: flex;
+  animation: fadeAndSlide .6s ease-in-out forwards;
+}
+
+@keyframes fadeAndSlide {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
